# exchangeRate_cbr

./: .gitignore  CMakeLists.txt  DATABASE.h  README.md  Write_to_file.h  config_parser.h  exchangeRate_cbr.cpp  exchangeRate_cbr.sln  exchangeRate_cbr.vcxproj  exchangeRate_cbr.vcxproj.filters  mistake.h  Сurrency_Сontainer.h
.github/workflows/: ci.yml
QT/: CurrencyX.pro  CurrencyX.pro.user.6c17750  CurrencyX.pro.user.ffaa392  DATABASE.h  Global.h  GraphicsDataItem.cpp  GraphicsPlotItem.cpp  GraphicsPlotLegend.cpp  Makefile  Progress.cpp  ProgressDialog.cpp  TestGraph.h  config_parser.h  configparser.cpp  configparser.h  connection_cb.h  connectionbank.cpp  connectionbank.h  container.h  convert1251.cpp  convert1251.h  convertCP1251.h  customgraph.cpp  customgraph.h  customgraph.ui  dataProcessor.h  data_processor.h  databaseconfig.cpp  databaseconfig.h  dataprocessor.cpp  dialogprogress.cpp  dialogprogress.h  dialogprogress.ui  getFromPostgres.cpp  getFromPostgres.h  graph.cpp  graph.h  graph.ui  image.qrc  lineeditforusers.cpp  (+36 more)
QT/.qtc_clangd/: compile_commands.json
data_file/: data.txt
lib/curl-8.8.0/: Makefile  config.status  libtool
lib/curl-8.8.0/docs/: Makefile  curl-config.1  mk-ca-bundle.1
lib/curl-8.8.0/docs/cmdline-opts/: Makefile  curl.txt
lib/curl-8.8.0/docs/examples/: Makefile
lib/curl-8.8.0/docs/libcurl/: Makefile  curl_easy_duphandle.3  curl_easy_header.3  curl_easy_init.3  curl_easy_option_by_id.3  curl_easy_option_by_name.3  curl_easy_recv.3  curl_easy_reset.3  curl_easy_upkeep.3  curl_escape.3  curl_formadd.3  curl_formfree.3  curl_formget.3  curl_getdate.3  curl_getenv.3  curl_global_cleanup.3  curl_global_init.3  curl_global_init_mem.3  curl_global_trace.3  curl_mime_addpart.3  curl_mime_data.3  curl_mime_data_cb.3  curl_mime_encoder.3  curl_mime_filedata.3  curl_mime_name.3  curl_mime_type.3  curl_mprintf.3  curl_multi_cleanup.3  curl_multi_fdset.3  curl_multi_perform.3  curl_multi_poll.3  curl_multi_remove_handle.3  curl_multi_socket.3  curl_multi_timeout.3  curl_multi_waitfds.3  curl_multi_wakeup.3  curl_pushheader_bynum.3  curl_share_cleanup.3  curl_share_init.3  curl_share_setopt.3  (+15 more)
lib/curl-8.8.0/include/: Makefile
lib/curl-8.8.0/include/curl/: Makefile
lib/curl-8.8.0/installCurl/lib/: libcurl.la  libcurl.so.4.8.0
lib/curl-8.8.0/lib/: Makefile  curl_config.h  libcurl.la  libcurl_la-bufq.lo  libcurl_la-cf-h1-proxy.lo  libcurl_la-cf-h2-proxy.lo  libcurl_la-cf-haproxy.lo  libcurl_la-curl_sha512_256.lo  libcurl_la-curl_trc.lo  libcurl_la-cw-out.lo  libcurl_la-dllmain.lo  libcurl_la-dynhds.lo  libcurl_la-http1.lo  libcurl_la-macos.lo  libcurl_la-request.lo
lib/curl-8.8.0/lib/.deps/: base64.Po  curl_multibyte.Po  dynbuf.Po  libcurl_la-altsvc.Plo  libcurl_la-amigaos.Plo  libcurl_la-asyn-ares.Plo  libcurl_la-asyn-thread.Plo  libcurl_la-base64.Plo  libcurl_la-bufq.Plo  libcurl_la-bufref.Plo  libcurl_la-c-hyper.Plo  libcurl_la-cf-h1-proxy.Plo  libcurl_la-cf-h2-proxy.Plo  libcurl_la-cf-haproxy.Plo  libcurl_la-cf-https-connect.Plo  libcurl_la-cf-socket.Plo  libcurl_la-cfilters.Plo  libcurl_la-conncache.Plo  libcurl_la-connect.Plo  libcurl_la-content_encoding.Plo  libcurl_la-cookie.Plo  libcurl_la-curl_addrinfo.Plo  libcurl_la-curl_des.Plo  libcurl_la-curl_endian.Plo  libcurl_la-curl_fnmatch.Plo  libcurl_la-curl_get_line.Plo  libcurl_la-curl_gethostname.Plo  libcurl_la-curl_gssapi.Plo  libcurl_la-curl_memrchr.Plo  libcurl_la-curl_multibyte.Plo  libcurl_la-curl_ntlm_core.Plo  libcurl_la-curl_path.Plo  libcurl_la-curl_range.Plo  libcurl_la-curl_rtmp.Plo  libcurl_la-curl_sasl.Plo  libcurl_la-curl_sha512_256.Plo  libcurl_la-curl_sspi.Plo  libcurl_la-curl_threads.Plo  libcurl_la-curl_trc.Plo  libcurl_la-cw-out.Plo  (+101 more)
lib/curl-8.8.0/lib/.libs/: libcurl.exp  libcurl.ver
lib/curl-8.8.0/lib/vquic/: libcurl_la-curl_osslq.lo  libcurl_la-vquic-tls.lo
lib/curl-8.8.0/lib/vtls/: libcurl_la-cipher_suite.lo
lib/curl-8.8.0/scripts/: Makefile
lib/curl-8.8.0/src/: Makefile  curl  tool_hugehelp.c
lib/curl-8.8.0/src/.deps/: slist_wc.Po  tool_binmode.Po  tool_bname.Po  tool_cb_dbg.Po  tool_cb_hdr.Po  tool_cb_prg.Po  tool_cb_rea.Po  tool_cb_see.Po  tool_cb_wrt.Po  tool_cfgable.Po  tool_dirhie.Po  tool_doswin.Po  tool_easysrc.Po  tool_filetime.Po  tool_findfile.Po  tool_formparse.Po  (+26 more)
lib/curl-8.8.0/tests/: Makefile
lib/libiconv-1.17/: config.h  config.status  libtool
lib/libiconv-1.17/lib/: libcharset.so.1.0.0  libiconv.la
lib/libiconv-1.17/libcharset/: config.h  config.status  libtool
lib/libiconv-1.17/po/: Makefile  Makefile.in
lib/libiconv-1.17/src/: Makefile  iconv  iconv_no_i18n
lib/libiconv-1.17/srclib/: Makefile  stdio.h  stdlib.h  string.h  unistd.h  wchar.h
(+698 files in other folders)
